--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 
     <title>Installation BelIS-App alpha</title>
     <style type="text/css">
-body { 
-  background: url(belis.jpg) no-repeat center center fixed; 
+body {
+  background: url(belis.jpg) no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
@@ -19,14 +19,14 @@ body {
 }
     </style>
     <!-- Bootstrap core CSS -->
-    <link href="../../dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="./dist/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
     <link href="cover.css" rel="stylesheet">
 
     <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
     <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
-    <script src="../../assets/js/ie-emulation-modes-warning.js"></script>
+    <script src="./assets/js/ie-emulation-modes-warning.js"></script>
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
@@ -58,7 +58,7 @@ body {
 -->
           <div class="inner cover">
             <h1 class="cover-heading">BelIS-App</h1>
-            <p class="lead">Mit dem untenstehenden Button kann die mobile Alphaversion von BelIS, der Software zur Verwaltung der städtischen Beleuchtung in Wuppertal, gestartet werden. 
+            <p class="lead">Mit dem untenstehenden Button kann die mobile Alphaversion von BelIS, der Software zur Verwaltung der städtischen Beleuchtung in Wuppertal, gestartet werden.
             Bitte entfernen Sie vorher ggf. installierte ältere Versionen. </p>
             <p class="lead">
               <a href="itms-services://?action=download-manifest&url=https://dl.dropboxusercontent.com/u/8114622/belisDeployments/bootstrap-3.3.2/docs/examples/cover/prerelease.plist" class="btn btn-lg btn-default">Installation</a>
@@ -81,9 +81,9 @@ body {
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-    <script src="../../dist/js/bootstrap.min.js"></script>
-    <script src="../../assets/js/docs.min.js"></script>
+    <script src="./dist/js/bootstrap.min.js"></script>
+    <script src="./assets/js/docs.min.js"></script>
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-    <script src="../../assets/js/ie10-viewport-bug-workaround.js"></script>
+    <script src="./assets/js/ie10-viewport-bug-workaround.js"></script>
   </body>
 </html>
