--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ body {
             <p class="lead">Mit dem untenstehenden Button kann die mobile Alphaversion von BelIS, der Software zur Verwaltung der städtischen Beleuchtung in Wuppertal, gestartet werden.
             Bitte entfernen Sie vorher ggf. installierte ältere Versionen. </p>
             <p class="lead">
-              <a href="itms-services://?action=download-manifest&url=https://dl.dropboxusercontent.com/u/8114622/belisDeployments/bootstrap-3.3.2/docs/examples/cover/prerelease.plist" class="btn btn-lg btn-default">Installation</a>
+              <a href="itms-services://?action=download-manifest&url=http://cismet.github.io/belis-app/prerelease.plist" class="btn btn-lg btn-default">Installation</a>
             </p>
           </div>
 
