corrected some text and paths in the preview version for the gh-pages deployment

--- a/index.html
+++ b/index.html
@@ -58,8 +58,10 @@ body {
 -->
           <div class="inner cover">
             <h1 class="cover-heading">BelIS-App</h1>
-            <p class="lead">Mit dem untenstehenden Button kann die mobile Alphaversion von BelIS, der Software zur Verwaltung der städtischen Beleuchtung in Wuppertal, gestartet werden.
-            Bitte entfernen Sie vorher ggf. installierte ältere Versionen. </p>
+            <p class="lead">Mit dem untenstehenden Button kann die mobile beta-Version von BelIS, der Software zur Verwaltung der städtischen Beleuchtung in Wuppertal, gestartet werden.
+           </p>
+           <p class="lead">Die Installation funktioniert nur auf vorher von uns freigeschalteten Geräten.
+          </p>
             <p class="lead">
               <a href="itms-services://?action=download-manifest&url=http://cismet.github.io/belis-app/prerelease.plist" class="btn btn-lg btn-default">Installation</a>
             </p>
