--- a/preview/index.html
+++ b/preview/index.html
@@ -19,14 +19,14 @@ body {
 }
     </style>
     <!-- Bootstrap core CSS -->
-    <link href="../../dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="../dist/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
     <link href="cover.css" rel="stylesheet">
 
     <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
     <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
-    <script src="../../assets/js/ie-emulation-modes-warning.js"></script>
+    <script src="../assets/js/ie-emulation-modes-warning.js"></script>
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
@@ -57,11 +57,14 @@ body {
           </div>
 -->
           <div class="inner cover">
-            <h1 class="cover-heading">BelIS-App</h1>
-            <p class="lead">Mit dem untenstehenden Button kann die mobile Alphaversion von BelIS, der Software zur Verwaltung der städtischen Beleuchtung in Wuppertal, gestartet werden.
-            Bitte entfernen Sie vorher ggf. installierte ältere Versionen. </p>
+            <h1 class="cover-heading">Preview BelIS-App</h1>
+            <p class="lead">Mit dem untenstehenden Button kann die mobile Alphaversion / Development Preview von BelIS, der Software zur Verwaltung der städtischen Beleuchtung in Wuppertal, gestartet werden.
+<br> Bitte laden Sie diese Software nur nach vorheriger Rücksprache mit der <a href="http://cismet.de">cismet GmbH</a>. Eine besthende Installation wird überschrieben!
+             </p>
+             <p class="lead">Die Installation funktioniert nur auf vorher von uns freigeschalteten Geräten.
+            </p>
             <p class="lead">
-              <a href="itms-services://?action=download-manifest&url=https://dl.dropboxusercontent.com/u/8114622/belisDeployments/bootstrap-3.3.2/docs/examples/cover/prerelease.plist" class="btn btn-lg btn-default">Installation</a>
+              <a href="itms-services://?action=download-manifest&url=http://cismet.github.io/belis-app/preview/prerelease.plist" class="btn btn-lg btn-default">Installation</a>
             </p>
           </div>
 
