corrected a typo in the preview version for the gh-pages deployment

--- a/preview/index.html
+++ b/preview/index.html
@@ -59,7 +59,7 @@ body {
           <div class="inner cover">
             <h1 class="cover-heading">Preview BelIS-App</h1>
             <p class="lead">Mit dem untenstehenden Button kann die mobile Alphaversion / Development Preview von BelIS, der Software zur Verwaltung der städtischen Beleuchtung in Wuppertal, gestartet werden.
-<br> Bitte laden Sie diese Software nur nach vorheriger Rücksprache mit der <a href="http://cismet.de">cismet GmbH</a>. Eine besthende Installation wird überschrieben!
+<br><br><br><b Bitte laden Sie diese Software nur nach vorheriger Rücksprache mit der <a href="http://cismet.de">cismet GmbH</a>. Eine bestehende Installation wird überschrieben!<br><br>
              </p>
              <p class="lead">Die Installation funktioniert nur auf vorher von uns freigeschalteten Geräten.
             </p>
