--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@ body {
 -->
           <div class="inner cover">
             <h1 class="cover-heading">BelIS-App</h1>
-            <p class="lead">Mit dem untenstehenden Button kann die mobile beta-Version von BelIS, der Software zur Verwaltung der städtischen Beleuchtung in Wuppertal, gestartet werden.
+            <p class="lead">Mit dem untenstehenden Button kann die mobile beta-Version von BelIS, der Software zur Verwaltung der städtischen Beleuchtung in Wuppertal, installiert werden.
            </p>
            <p class="lead">Die Installation funktioniert nur auf vorher von uns freigeschalteten Geräten.
           </p>
