switched the links to https for the gh-pages deployment

--- a/index.html
+++ b/index.html
@@ -63,13 +63,13 @@ body {
            <p class="lead">Die Installation funktioniert nur auf vorher von uns freigeschalteten Geräten.
           </p>
             <p class="lead">
-              <a href="itms-services://?action=download-manifest&url=http://cismet.github.io/belis-app/prerelease.plist" class="btn btn-lg btn-default">Installation</a>
+              <a href="itms-services://?action=download-manifest&url=https://cismet.github.io/belis-app/prerelease.plist" class="btn btn-lg btn-default">Installation</a>
             </p>
           </div>
 
           <div class="mastfoot">
             <div class="inner">
-              <p>Eine Entwicklung der <a href="http://cismet.de">cismet GmbH</a>.</p>
+              <p>Eine Entwicklung der <a href="https://cismet.de">cismet GmbH</a>.</p>
             </div>
           </div>
 
