--- a/preview/index.html
+++ b/preview/index.html
@@ -59,18 +59,18 @@ body {
           <div class="inner cover">
             <h1 class="cover-heading">Preview BelIS-App</h1>
             <p class="lead">Mit dem untenstehenden Button kann die mobile Alphaversion / Development Preview von BelIS, der Software zur Verwaltung der städtischen Beleuchtung in Wuppertal, installiert werden.
-<br><br><br> Bitte laden Sie diese Software nur nach vorheriger Rücksprache mit der <a href="http://cismet.de">cismet GmbH</a>. Eine bestehende Installation wird überschrieben!<br><br>
+<br><br><br> Bitte laden Sie diese Software nur nach vorheriger Rücksprache mit der <a href="https://cismet.de">cismet GmbH</a>. Eine bestehende Installation wird überschrieben!<br><br>
              </p>
              <p class="lead">Die Installation funktioniert nur auf vorher von uns freigeschalteten Geräten.
             </p>
             <p class="lead">
-              <a href="itms-services://?action=download-manifest&url=http://cismet.github.io/belis-app/preview/prerelease.plist" class="btn btn-lg btn-default">Installation</a>
+              <a href="itms-services://?action=download-manifest&url=https://cismet.github.io/belis-app/preview/prerelease.plist" class="btn btn-lg btn-default">Installation</a>
             </p>
           </div>
 
           <div class="mastfoot">
             <div class="inner">
-              <p>Eine Entwicklung der <a href="http://cismet.de">cismet GmbH</a>.</p>
+              <p>Eine Entwicklung der <a href="https://cismet.de">cismet GmbH</a>.</p>
             </div>
           </div>
 
