--- a/preview/index.html
+++ b/preview/index.html
@@ -1,31 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="">
-    <link rel="icon" href="../../../favicon.ico">
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="description" content="" />
+    <meta name="author" content="" />
+    <link rel="icon" href="../../../favicon.ico" />
 
     <title>Installation BelIS-App @ iOS 15 Ttest</title>
     <style type="text/css">
-body {
-  background: url(belis.jpg) no-repeat center center fixed;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
-}
+      body {
+        background: url(belis.jpg) no-repeat center center fixed;
+        -webkit-background-size: cover;
+        -moz-background-size: cover;
+        -o-background-size: cover;
+        background-size: cover;
+      }
     </style>
     <!-- Bootstrap core CSS -->
-    <link href="../dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="../dist/css/bootstrap.min.css" rel="stylesheet" />
 
     <!-- Custom styles for this template -->
-    <link href="cover.css" rel="stylesheet">
+    <link href="cover.css" rel="stylesheet" />
 
     <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
-    <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
+    <!--[if lt IE 9
+      ]><script src="../../assets/js/ie8-responsive-file-warning.js"></script
+    ><![endif]-->
     <script src="../assets/js/ie-emulation-modes-warning.js"></script>
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
@@ -36,13 +38,10 @@ body {
   </head>
 
   <body>
-
     <div class="site-wrapper">
-
       <div class="site-wrapper-inner">
-
         <div class="cover-container">
-<!--
+          <!--
           <div class="masthead clearfix">
             <div class="inner">
               <h3 class="masthead-brand">Cover</h3>
@@ -58,27 +57,39 @@ body {
 -->
           <div class="inner cover">
             <h1 class="cover-heading">Preview BelIS-App</h1>
-            <h4 class="cover-heading">0.12.12</h4>
-            <p class="lead">Mit dem untenstehenden Button kann die mobile Alphaversion / Development Preview von BelIS, der Software zur Verwaltung der städtischen Beleuchtung in Wuppertal, installiert werden.
-<br><br><br> Bitte laden Sie diese Software nur nach vorheriger Rücksprache mit der <a href="https://cismet.de">cismet GmbH</a>. Eine bestehende Installation wird überschrieben!<br><br>
-             </p>
-             <p class="lead">Die Installation funktioniert nur auf vorher von uns freigeschalteten Geräten.
+            <h4 class="cover-heading">0.12.13</h4>
+            <p class="lead">
+              Mit dem untenstehenden Button kann die mobile Alphaversion /
+              Development Preview von BelIS, der Software zur Verwaltung der
+              städtischen Beleuchtung in Wuppertal, installiert werden.
+              <br /><br /><br />
+              Bitte laden Sie diese Software nur nach vorheriger Rücksprache mit
+              der <a href="https://cismet.de">cismet GmbH</a>. Eine bestehende
+              Installation wird überschrieben!<br /><br />
             </p>
             <p class="lead">
-              <a href="itms-services://?action=download-manifest&url=https://cismet.github.io/belis-app/preview/prerelease.plist" class="btn btn-lg btn-default">Installation</a>
+              Die Installation funktioniert nur auf vorher von uns
+              freigeschalteten Geräten.
+            </p>
+            <p class="lead">
+              <a
+                href="itms-services://?action=download-manifest&url=https://cismet.github.io/belis-app/preview/prerelease.plist"
+                class="btn btn-lg btn-default"
+                >Installation</a
+              >
             </p>
           </div>
 
           <div class="mastfoot">
             <div class="inner">
-              <p>Eine Entwicklung der <a href="https://cismet.de">cismet GmbH</a>.</p>
+              <p>
+                Eine Entwicklung der
+                <a href="https://cismet.de">cismet GmbH</a>.
+              </p>
             </div>
           </div>
-
         </div>
-
       </div>
-
     </div>
 
     <!-- Bootstrap core JavaScript
